--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "npm": "^6.6.0",
     "pg": "^7.6.0"
-  }
+  },
+  "devDependencies": {}
 }
