--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "archiver": "^3.0.0",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "dateformat": "^3.0.3",
     "debug": "~2.6.9",
@@ -15,7 +17,8 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "npm": "^6.6.0",
-    "pg": "^7.6.0"
+    "pg": "^7.6.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {}
 }
