--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "debug": "~2.6.9",
     "dotenv": "^6.1.0",
     "express": "~4.16.0",
-    "hbs": "~4.0.1",
+    "express-session": "^1.15.6",
+    "hbs": "^4.0.3",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "npm": "^6.6.0",
+    "passport": "^0.4.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^7.6.0",
     "uuid": "^3.3.2"
   },
